# f1tenth_ws

./: README.md  rviz2_config.rviz
docs/: installation.md  race1.md  race2.md  race3.md  remote_visualization.md
maps/: race2.yaml  race3.pgm  race3.yaml  race3_obs.pgm  race3_obs.yaml
scripts/: race1.bash  race2.bash  race3.bash  sim.bash  teleop.bash  throttle.bash  waypoint_logger.bash
scripts/odom_tuner/: odom_noise_relay.bash  odom_tuner.bash
scripts/utils/: draw_rectangle.py  plot_dynamics.py  waypoint_postprocess.py
src/f1tenth_utils/: package.xml  setup.cfg  setup.py
src/f1tenth_utils/f1tenth_utils/: utils.py  vis_utils.py
src/odom_tuner/: package.xml  setup.cfg  setup.py
src/odom_tuner/odom_tuner/: odom_noise_relay.py  odom_tuner.py
src/race1/: package.xml  setup.cfg  setup.py
src/race1/race1/: disparity_extender.py
src/race2/: package.xml  setup.cfg  setup.py
src/race2/race2/: pure_pursuit.py
src/race3/: package.xml  setup.cfg  setup.py
src/race3/config/: race3.yaml
src/race3/race3/: race3.py
src/race3/race3/avoidance/: frenet_converter.py  frenet_mpc_helper.py  frenet_planner.py  gap_follower.py  quintic_polynomial.py
src/race3/race3/tracker/: mpc.py  pp.py
src/waypoint_logger/: package.xml  setup.py
src/waypoint_logger/waypoint_logger/: waypoint_logger.py
waypoints/: race2.csv  race3.csv
